<?xml version="1.0"?>
<package format="2">
  <name>evaluation_heightmap</name>
  <version>0.0.0</version>
  <description>The evaluation_heightmap package</description>

  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">sktometometo</maintainer>

  <license>MIT</license>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
